# tideo

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  Makefile  README.md  docker-compose.yml  kafka.env  pyproject.toml
app/api/: errors.py  main.py  model.py  utils.py  ws.py
app/core/: config.py  logging.py  ratelimit.py
app/dispatcher/: __main__.py  audit.py  dispatch.py  guard.py  handler.py
app/domain/: errors.py  ladder.py  playlist.py  recommend.py  state.py  vtt.py
app/events/: admin.py  envelope.py  payloads.py  producer.py  (+1 more)
deploy/: .env.deploy  Dockerfile  README.space.md  deploy-space.sh  kraft-tideo.properties  supervisord.conf
frontend/: history.html  index.html  job.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: fire_task.py  fixtures_spec.py  make_fixtures.py  scale_bench.py  verify_fixtures.py
tests/: conftest.py  test_admin.py  test_artifacts.py  test_audit.py  test_celery_app.py  test_cleanup.py  test_config.py  test_db.py  test_db_integration.py  test_dedupe.py  test_dispatch.py  test_dispatcher.py  test_dlq.py  test_envelope.py  test_errors.py  test_ffmpeg.py  test_ffprobe.py  test_job.py  test_ladder.py  test_logging.py  test_package.py  test_paths.py  test_playlist.py  test_pressure.py  test_progress.py  test_ratelimit.py  test_recommend.py  test_rendition.py  test_retry.py  test_retry_after.py  test_source.py  test_state.py  test_status.py  test_subtitles.py  test_thumbs.py  test_transcode.py  test_transcode_endpoint.py  test_transcribe.py  test_upload.py  test_vtt.py  (+3 more)
(+69 files in other folders)
