[project]
name = "tideo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "confluent-kafka>=2.14.2",
    "fastapi[standard]>=0.136.3",
    "flower>=2.0.1",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "redis>=8.0.0",
    "structlog>=24.1.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
